--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "php": ">=5.3.14",
-        "easyframework/collections": "2.1.*"
+        "easyframework/collections": "2.1.*",
+        "symfony/debug": "2.3.*"
     },
     "autoload": {
         "psr-0": {
